--- a/openclsim/notebooks/01_BasicActivity_example.ipynb
+++ b/openclsim/notebooks/01_BasicActivity_example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "start event instance None\n"
+     "output_type": "stream",
+     "text": [
+      "start event instance None\n"
+     ]
     }
    ],
    "source": [
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,17 +74,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "          Message ActivityState           Timestamp  Value  \\\n0  Basic activity         START 1970-01-01 01:00:00     14   \n1  Basic activity          STOP 1970-01-01 01:00:14     14   \n\n                             ActivityID  \n0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Message</th>\n      <th>ActivityState</th>\n      <th>Timestamp</th>\n      <th>Value</th>\n      <th>ActivityID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Basic activity</td>\n      <td>START</td>\n      <td>1970-01-01 01:00:00</td>\n      <td>14</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Basic activity</td>\n      <td>STOP</td>\n      <td>1970-01-01 01:00:14</td>\n      <td>14</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Message</th>\n",
+       "      <th>ActivityState</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>ActivityID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Basic activity</td>\n",
+       "      <td>START</td>\n",
+       "      <td>1970-01-01 01:00:00</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Basic activity</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>1970-01-01 01:00:14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Message ActivityState           Timestamp  Value  \\\n",
+       "0  Basic activity         START 1970-01-01 01:00:00     14   \n",
+       "1  Basic activity          STOP 1970-01-01 01:00:14     14   \n",
+       "\n",
+       "                             ActivityID  \n",
+       "0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
+       "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
+      ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -101,13 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "start event instance None\nstart event instance None\n"
+     "output_type": "stream",
+     "text": [
+      "start event instance None\n",
+      "start event instance None\n"
+     ]
     }
    ],
    "source": [
@@ -141,17 +200,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "          Message ActivityState           Timestamp  Value  \\\n0  Basic activity         START 1970-01-01 01:01:40     14   \n1  Basic activity          STOP 1970-01-01 01:01:54     14   \n\n                             ActivityID  \n0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Message</th>\n      <th>ActivityState</th>\n      <th>Timestamp</th>\n      <th>Value</th>\n      <th>ActivityID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Basic activity</td>\n      <td>START</td>\n      <td>1970-01-01 01:01:40</td>\n      <td>14</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Basic activity</td>\n      <td>STOP</td>\n      <td>1970-01-01 01:01:54</td>\n      <td>14</td>\n      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Message</th>\n",
+       "      <th>ActivityState</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>ActivityID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Basic activity</td>\n",
+       "      <td>START</td>\n",
+       "      <td>1970-01-01 01:00:28</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Basic activity</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>1970-01-01 01:00:42</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Message ActivityState           Timestamp  Value  \\\n",
+       "0  Basic activity         START 1970-01-01 01:00:28     14   \n",
+       "1  Basic activity          STOP 1970-01-01 01:00:42     14   \n",
+       "\n",
+       "                             ActivityID  \n",
+       "0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
+       "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
+      ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -159,9 +272,21 @@
     "reporting =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
     "reporting"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -172,12 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
