different  config scenarios

--- a/openclsim/notebooks/000 - Questions.ipynb
+++ b/openclsim/notebooks/000 - Questions.ipynb
@@ -8,7 +8,8 @@
     "* Why did you change the log structure? Did you change that as well for the single run process?\n",
     "* What do we have to do to make the old notebooks run again?\n",
     "* What happend to the stop_events?\n",
-    "* Why implement such a complex condition_event parser if you can just use simpy events?"
+    "* Why implement such a complex condition_event parser if you can just use simpy events?\n",
+    "* why all the set time-outs in the condition event parser?"
    ]
   },
   {
