--- a/openclsim/notebooks/000 - Questions.ipynb
+++ b/openclsim/notebooks/000 - Questions.ipynb
@@ -33,7 +33,9 @@
    "source": [
     "### Notes\n",
     "\n",
-    "\n"
+    "* Sequence activty and while activity (wrapping activities) reset done event of all childred (sub processes) instead of activty reset it's own done activity\n",
+    "\n",
+    "* Update events of the environment with a better method that env.timeout(0). If a activity is wrapped by another activity, and the event finnishes, the done events are not automaticly updated. This is now done with env.timeout(0). This also holds for shifting amoutns in containers. A possible mistake is the (mis)use of the yield command\n"
    ]
   },
   {
