--- a/notebooks/01_BasicActivity_example.ipynb
+++ b/notebooks/01_BasicActivity_example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "my_env.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(1970, 1, 1, 0, 0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.datetime(1970, 1, 1, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -148,10 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "simulation_start = 0\n",
+    "my_env = simpy.Environment(initial_time=simulation_start)\n",
+    "registry = {}\n",
+    "\n",
     "reporting_activity_data = {\n",
     "    \"env\": my_env,\n",
     "    \"name\": \"Reporting activity\",\n",
@@ -182,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +249,7 @@
        "      <th>0</th>\n",
        "      <td>Basic activity</td>\n",
        "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>14</td>\n",
        "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
@@ -226,7 +257,7 @@
        "      <th>1</th>\n",
        "      <td>Basic activity</td>\n",
        "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:00:28</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>14</td>\n",
        "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
@@ -236,15 +267,15 @@
       ],
       "text/plain": [
        "          Message ActivityState           Timestamp  Value  \\\n",
-       "0  Basic activity         START 1970-01-01 00:00:14     14   \n",
-       "1  Basic activity          STOP 1970-01-01 00:00:28     14   \n",
+       "0  Basic activity         START 1970-01-01 00:00:00     14   \n",
+       "1  Basic activity          STOP 1970-01-01 00:00:14     14   \n",
        "\n",
        "                             ActivityID  \n",
        "0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
        "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,10 +288,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Message': ['Reporting activity',\n",
+       "  'Basic activity',\n",
+       "  'Reporting activity',\n",
+       "  'Basic activity'],\n",
+       " 'Timestamp': [datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 14)],\n",
+       " 'Value': [0, 14, 0, 14],\n",
+       " 'Geometry': [None, None, None, None],\n",
+       " 'ActivityID': ['6dbbbdf7-4589-11e9-bf3b-b469212bff5k',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5b',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5k',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5b'],\n",
+       " 'ActivityState': ['START', 'START', 'STOP', 'STOP']}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reporting_activity.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Message': ['Basic activity', 'Basic activity'],\n",
+       " 'Timestamp': [datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 14)],\n",
+       " 'Value': [14, 14],\n",
+       " 'Geometry': [None, None],\n",
+       " 'ActivityID': ['6dbbbdf7-4589-11e9-bf3b-b469212bff5b',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5b'],\n",
+       " 'ActivityState': ['START', 'STOP']}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "activity.log"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
