add extra tests

--- a/notebooks/03_ShiftAmountActivity.ipynb
+++ b/notebooks/03_ShiftAmountActivity.ipynb
@@ -254,6 +254,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_log(log):\n",
+    "    \"\"\"Parse the log into benchmarkable data.\"\"\"\n",
+    "    new_log = log.copy()\n",
+    "    new_log[\"Geometry\"] = [(L.x, L.y) if L is not None else None for L in log[\"Geometry\"]]\n",
+    "    return new_log\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Message': ['Transfer MP', 'Transfer MP'],\n",
+       " 'Timestamp': [datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 10)],\n",
+       " 'Value': [2, 2],\n",
+       " 'Geometry': [None, None],\n",
+       " 'ActivityID': ['6dbbbdf7-4589-11e9-bf3b-b469212bff5b',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5b'],\n",
+       " 'ActivityState': ['START', 'STOP']}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_log(activity.log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Message': ['Shift amount activity Transfer MP transfer default from Winlocatie to Hopper 01 with Hopper 01',\n",
+       "  'Shift amount activity Transfer MP transfer default from Winlocatie to Hopper 01 with Hopper 01'],\n",
+       " 'Timestamp': [datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 10)],\n",
+       " 'Value': [2, 2],\n",
+       " 'Geometry': [(4.18055556, 52.18664444), (4.18055556, 52.18664444)],\n",
+       " 'ActivityID': ['6dbbbdf7-4589-11e9-bf3b-b469212bff5b',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5b'],\n",
+       " 'ActivityState': ['START', 'STOP']}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_log(from_site.log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Message': ['Shift amount activity Transfer MP transfer default from Winlocatie to Hopper 01 with Hopper 01',\n",
+       "  'Shift amount activity Transfer MP transfer default from Winlocatie to Hopper 01 with Hopper 01',\n",
+       "  'Shift amount activity Transfer MP transfer default from Winlocatie to Hopper 01 with Hopper 01',\n",
+       "  'Shift amount activity Transfer MP transfer default from Winlocatie to Hopper 01 with Hopper 01'],\n",
+       " 'Timestamp': [datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 10),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 10)],\n",
+       " 'Value': [2, 2, 2, 2],\n",
+       " 'Geometry': [(4.18055556, 52.18664444),\n",
+       "  (4.18055556, 52.18664444),\n",
+       "  (4.18055556, 52.18664444),\n",
+       "  (4.18055556, 52.18664444)],\n",
+       " 'ActivityID': ['6dbbbdf7-4589-11e9-bf3b-b469212bff5b',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5b',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5b',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5b'],\n",
+       " 'ActivityState': ['START', 'START', 'STOP', 'STOP']}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_log(hopper.log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Message': ['Transfer MP', 'Transfer MP'],\n",
+       " 'Timestamp': [datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 10)],\n",
+       " 'Value': [2, 2],\n",
+       " 'Geometry': [None, None],\n",
+       " 'ActivityID': ['6dbbbdf7-4589-11e9-bf3b-b469212bff5b',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff5b'],\n",
+       " 'ActivityState': ['START', 'STOP']}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "activity.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
