--- a/notebooks/09_MultiContainer.ipynb
+++ b/notebooks/09_MultiContainer.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "1  6dbbbdf7-4589-11e9-bf3b-b469212bff52  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "2 1970-01-01 00:00:20      1  6dbbbdf7-4589-11e9-bf3b-b469212bff52  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,27 +333,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hopper.container.get_level(id_=\"MP\")"
+    "hopper.container.get_level(id_=\"TP\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,10 +373,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse_log(log):\n",
+    "    \"\"\"Parse the log into benchmarkable data.\"\"\"\n",
+    "    new_log = log.copy()\n",
+    "    new_log[\"Geometry\"] = [\n",
+    "        (L.x, L.y) if L is not None else None for L in log[\"Geometry\"]\n",
+    "    ]\n",
+    "    return new_log\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Message': ['Shift amount activity Transfer MP transfer MP from Winlocatie to Hopper 01 with Hopper 01',\n",
+       "  'Shift amount activity Transfer MP transfer MP from Winlocatie to Hopper 01 with Hopper 01',\n",
+       "  'Shift amount activity Transfer MP transfer MP from Winlocatie to Hopper 01 with Hopper 01',\n",
+       "  'Shift amount activity Transfer MP transfer MP from Winlocatie to Hopper 01 with Hopper 01'],\n",
+       " 'Timestamp': [datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 20),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 20)],\n",
+       " 'Value': [1, 1, 1, 1],\n",
+       " 'Geometry': [(4.18055556, 52.18664444),\n",
+       "  (4.18055556, 52.18664444),\n",
+       "  (4.18055556, 52.18664444),\n",
+       "  (4.18055556, 52.18664444)],\n",
+       " 'ActivityID': ['6dbbbdf7-4589-11e9-bf3b-b469212bff52',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff52',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff52',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff52'],\n",
+       " 'ActivityState': ['START', 'START', 'STOP', 'STOP']}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_log(hopper.log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Message': ['Shift amount activity Transfer MP transfer MP from Winlocatie to Hopper 01 with Hopper 01',\n",
+       "  'Shift amount activity Transfer MP transfer MP from Winlocatie to Hopper 01 with Hopper 01'],\n",
+       " 'Timestamp': [datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 20)],\n",
+       " 'Value': [1, 1],\n",
+       " 'Geometry': [(4.18055556, 52.18664444), (4.18055556, 52.18664444)],\n",
+       " 'ActivityID': ['6dbbbdf7-4589-11e9-bf3b-b469212bff52',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff52'],\n",
+       " 'ActivityState': ['START', 'STOP']}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_log(from_site.log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Message': ['Transfer MP', 'Transfer MP'],\n",
+       " 'Timestamp': [datetime.datetime(1970, 1, 1, 0, 0),\n",
+       "  datetime.datetime(1970, 1, 1, 0, 0, 20)],\n",
+       " 'Value': [1, 1],\n",
+       " 'Geometry': [None, None],\n",
+       " 'ActivityID': ['6dbbbdf7-4589-11e9-bf3b-b469212bff52',\n",
+       "  '6dbbbdf7-4589-11e9-bf3b-b469212bff52'],\n",
+       " 'ActivityState': ['START', 'STOP']}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_log(activity.log)"
+   ]
   },
   {
    "cell_type": "code",
