--- a/notebooks/17_SingleRun with weather.ipynb
+++ b/notebooks/17_SingleRun with weather.ipynb
@@ -27,16 +27,18 @@
     "import openclsim.core as core\n",
     "import openclsim.model as model\n",
     "import openclsim.plot as plot\n",
-    "\n",
+    "from plotly.offline import init_notebook_mode, iplot\n",
+    "import plotly.graph_objs as go\n",
     "import openclsim.plugins as plugin\n",
+    "import numpy as np\n",
+    "\n",
+    "init_notebook_mode(connected=True)\n",
     "\n",
     "# setup environment\n",
     "simulation_start  = datetime.datetime(2009,1,1)\n",
     "my_env = simpy.Environment(initial_time=simulation_start.timestamp())\n",
     "registry = {}\n",
-    "keep_resources = {}\n",
-    "\n",
-    "import numpy as np"
+    "keep_resources = {}"
    ]
   },
   {
@@ -3566,12 +3568,6 @@
     }
    ],
    "source": [
-    "from plotly.offline import init_notebook_mode, iplot\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "\n",
-    "init_notebook_mode(connected=True)\n",
-    "\n",
     "res = plot.vessel_planning([hopper], y_scale=\"numbers\", static=True)\n",
     "data = res['data']\n",
     "layout = res['layout']\n",
@@ -3598,6 +3594,13 @@
     "\n",
     "go.Figure(data=data, layout=layout)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
