clean-up notebooks

--- a/notebooks/10_Process_synchronization_example.ipynb
+++ b/notebooks/10_Process_synchronization_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "import pandas as pd\n",
     "import openclsim.core as core\n",
     "import openclsim.model as model\n",
+    "import openclsim.plot as plot\n",
     "\n",
     "# setup environment\n",
     "simulation_start = 0\n",
@@ -225,13 +226,6 @@
    "source": [
     "Both activities start at the same time. Activity2 gets into a waiting state, which ends, when Activity1 ends. Then Activity2 is executed."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
