--- a/notebooks/01_BasicActivity_example.ipynb
+++ b/notebooks/01_BasicActivity_example.ipynb
@@ -19,6 +19,7 @@
     "import pandas as pd\n",
     "import openclsim.core as core\n",
     "import openclsim.model as model\n",
+    "import openclsim.plot as plot\n",
     "\n",
     "# setup environment\n",
     "simulation_start = 0\n",
@@ -44,7 +45,7 @@
     "                      \"ID\":\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
     "                      \"registry\": registry,\n",
     "                      \"duration\" : 14}\n",
-    "activity = model.BasicActivity(**basic_activity_data)\n"
+    "activity = model.BasicActivity(**basic_activity_data)"
    ]
   },
   {
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,53 +90,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Message</th>\n",
-       "      <th>ActivityState</th>\n",
        "      <th>Timestamp</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>ActivityID</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>ActivityState</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Basic activity</td>\n",
        "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>14</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Basic activity</td>\n",
        "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
-       "      <td>14</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Message ActivityState           Timestamp  Value  \\\n",
-       "0  Basic activity         START 1970-01-01 00:00:00     14   \n",
-       "1  Basic activity          STOP 1970-01-01 00:00:14     14   \n",
-       "\n",
-       "                             ActivityID  \n",
-       "0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
-       "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
+       "            Timestamp        Activity ActivityState\n",
+       "0 1970-01-01 00:00:00  Basic activity         START\n",
+       "1 1970-01-01 00:00:14  Basic activity          STOP"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_df = pd.DataFrame(activity.log)\n",
-    "data =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
-    "data"
+    "plot.get_log_dataframe(activity, [activity])"
    ]
   },
   {
@@ -148,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -210,54 +199,49 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Message</th>\n",
-       "      <th>ActivityState</th>\n",
        "      <th>Timestamp</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>ActivityID</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>ActivityState</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Basic activity</td>\n",
        "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>14</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Basic activity</td>\n",
        "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
-       "      <td>14</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Message ActivityState           Timestamp  Value  \\\n",
-       "0  Basic activity         START 1970-01-01 00:00:00     14   \n",
-       "1  Basic activity          STOP 1970-01-01 00:00:14     14   \n",
-       "\n",
-       "                             ActivityID  \n",
-       "0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
-       "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
+       "            Timestamp        Activity ActivityState\n",
+       "0 1970-01-01 00:00:00  Basic activity         START\n",
+       "1 1970-01-01 00:00:14  Basic activity          STOP"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_df = pd.DataFrame(activity.log)\n",
-    "reporting =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
-    "reporting"
+    "plot.get_log_dataframe(activity, [activity])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
