--- a/notebooks/10_Process_synchronization_example.ipynb
+++ b/notebooks/10_Process_synchronization_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,113 +111,82 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Message</th>\n",
-       "      <th>ActivityState</th>\n",
        "      <th>Timestamp</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>ActivityID</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>ActivityState</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Reporting activity</td>\n",
        "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5k</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Activity1</td>\n",
        "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>14</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Activity2</td>\n",
        "      <td>WAIT_START</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>Reporting activity</td>\n",
        "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5k</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Activity1</td>\n",
        "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
-       "      <td>14</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Activity2</td>\n",
        "      <td>WAIT_STOP</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>Activity2</td>\n",
        "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
-       "      <td>30</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>1970-01-01 00:00:44</td>\n",
        "      <td>Activity2</td>\n",
        "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:00:44</td>\n",
-       "      <td>30</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5c</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Message ActivityState           Timestamp  Value  \\\n",
-       "0  Reporting activity         START 1970-01-01 00:00:00      0   \n",
-       "1           Activity1         START 1970-01-01 00:00:00     14   \n",
-       "2           Activity2    WAIT_START 1970-01-01 00:00:00     -1   \n",
-       "3  Reporting activity          STOP 1970-01-01 00:00:00      0   \n",
-       "4           Activity1          STOP 1970-01-01 00:00:14     14   \n",
-       "5           Activity2     WAIT_STOP 1970-01-01 00:00:14     -1   \n",
-       "6           Activity2         START 1970-01-01 00:00:14     30   \n",
-       "7           Activity2          STOP 1970-01-01 00:00:44     30   \n",
-       "\n",
-       "                             ActivityID  \n",
-       "0  6dbbbdf7-4589-11e9-bf3b-b469212bff5k  \n",
-       "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
-       "2  6dbbbdf7-4589-11e9-bf3b-b469212bff5c  \n",
-       "3  6dbbbdf7-4589-11e9-bf3b-b469212bff5k  \n",
-       "4  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
-       "5  6dbbbdf7-4589-11e9-bf3b-b469212bff5c  \n",
-       "6  6dbbbdf7-4589-11e9-bf3b-b469212bff5c  \n",
-       "7  6dbbbdf7-4589-11e9-bf3b-b469212bff5c  "
+       "            Timestamp            Activity ActivityState\n",
+       "0 1970-01-01 00:00:00  Reporting activity         START\n",
+       "1 1970-01-01 00:00:00           Activity1         START\n",
+       "2 1970-01-01 00:00:00           Activity2    WAIT_START\n",
+       "3 1970-01-01 00:00:00  Reporting activity          STOP\n",
+       "4 1970-01-01 00:00:14           Activity1          STOP\n",
+       "5 1970-01-01 00:00:14           Activity2     WAIT_STOP\n",
+       "6 1970-01-01 00:00:14           Activity2         START\n",
+       "7 1970-01-01 00:00:44           Activity2          STOP"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "log_df = pd.DataFrame(reporting_activity.log)\n",
-    "data =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
-    "data"
+    "display(plot.get_log_dataframe(reporting_activity, [activity, activity2, reporting_activity]))"
    ]
   },
   {
