--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -21,6 +21,7 @@
     "import pandas as pd\n",
     "import openclsim.core as core\n",
     "import openclsim.model as model\n",
+    "import openclsim.plot as plot\n",
     "\n",
     "# setup environment\n",
     "simulation_start = 0\n",
@@ -164,78 +165,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Message</th>\n",
-       "      <th>ActivityState</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>ActivityID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>move activity Soil movement of Hopper 01 to Du...</td>\n",
-       "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:00.000000</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>move activity Soil movement of Hopper 01 to Du...</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:15:42.824591</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002\" ><caption>Log of the Soil movement</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
+       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row0_col1\" class=\"data row0 col1\" >Soil movement</td>\n",
+       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:15:42.824591</td>\n",
+       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row1_col1\" class=\"data row1 col1\" >Soil movement</td>\n",
+       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row1_col2\" class=\"data row1 col2\" >STOP</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
       ],
       "text/plain": [
-       "                                             Message ActivityState  \\\n",
-       "0  move activity Soil movement of Hopper 01 to Du...         START   \n",
-       "1  move activity Soil movement of Hopper 01 to Du...          STOP   \n",
-       "\n",
-       "                   Timestamp  Value                            ActivityID  \n",
-       "0 1970-01-01 00:00:00.000000     -1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
-       "1 1970-01-01 00:15:42.824591     -1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
+       "<pandas.io.formats.style.Styler at 0x7fb21c931c18>"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002\" ><caption>Log of the Hopper 01</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>        <th class=\"col_heading level0 col3\" >geometry</th>        <th class=\"col_heading level0 col4\" >container level</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col1\" class=\"data row0 col1\" >Soil movement</td>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col3\" class=\"data row0 col3\" >POINT (4.18055556 52.18664444)</td>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col4\" class=\"data row0 col4\" >0.000000</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:15:42.824591</td>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col1\" class=\"data row1 col1\" >Soil movement</td>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col2\" class=\"data row1 col2\" >STOP</td>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col3\" class=\"data row1 col3\" >POINT (4.25222222 52.11428333)</td>\n",
+       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col4\" class=\"data row1 col4\" >0.000000</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7fb21c931f28>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "log_df = pd.DataFrame(activity.log)\n",
-    "data =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
-    "data"
+    "display(plot.get_log_dataframe(activity, [activity]))\n",
+    "display(plot.get_log_dataframe(hopper, [activity]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
