--- a/notebooks/03_ShiftAmountActivity.ipynb
+++ b/notebooks/03_ShiftAmountActivity.ipynb
@@ -24,8 +24,15 @@
     "import pandas as pd\n",
     "import openclsim.core as core\n",
     "import openclsim.model as model\n",
-    "\n",
-    "# setup environment\n",
+    "import openclsim.plot as plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "simulation_start = 0\n",
     "my_env = simpy.Environment(initial_time=simulation_start)\n",
     "registry = {}"
@@ -40,48 +47,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The generic site class\n",
     "Site = type(\n",
     "    \"Site\",\n",
     "    (\n",
-    "        core.Identifiable,  # Give it a name\n",
-    "        core.Log,  # Allow logging of all discrete events\n",
-    "        core.Locatable,  # Add coordinates to extract distance information and visualize\n",
-    "        core.HasContainer,  # Add information on the material available at the site\n",
+    "        core.Identifiable,\n",
+    "        core.Log,\n",
+    "        core.Locatable,\n",
+    "        core.HasContainer,\n",
     "        core.HasResource,\n",
-    "    ),  # Add information on serving equipment\n",
+    "    ),\n",
     "    {},\n",
-    ")  # The dictionary is empty because the site type is generic\n",
+    ")\n",
     "\n",
-    "# Information on the extraction site - the \"from site\" - the \"win locatie\"\n",
-    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)  # lon, lat\n",
+    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
     "\n",
     "data_from_site = {\n",
-    "    \"env\": my_env,  # The simpy environment defined in the first cel\n",
-    "    \"name\": \"Winlocatie\",  # The name of the site\n",
-    "    \"geometry\": location_from_site,  # The coordinates of the project site\n",
-    "    \"capacity\": 10,  # The capacity of the site\n",
+    "    \"env\": my_env,\n",
+    "    \"name\": \"Winlocatie\",\n",
+    "    \"geometry\": location_from_site,\n",
+    "    \"capacity\": 10,\n",
     "    \"level\": 2,\n",
-    "}  # The actual volume of the site\n",
+    "}\n",
     "\n",
-    "# Information on the dumping site - the \"to site\" - the \"dump locatie\"\n",
-    "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)  # lon, lat\n",
     "\n",
-    "data_to_site = {\n",
-    "    \"env\": my_env,  # The simpy environment defined in the first cel\n",
-    "    \"name\": \"Dumplocatie\",  # The name of the site\n",
-    "    \"geometry\": location_to_site,  # The coordinates of the project site\n",
-    "    \"capacity\": 10,  # The capacity of the site\n",
-    "    \"level\": 0,\n",
-    "}  # The actual volume of the site (empty of course)\n",
     "\n",
     "# The two objects used for the simulation\n",
-    "from_site = Site(**data_from_site)\n",
-    "to_site = Site(**data_to_site)"
+    "from_site = Site(**data_from_site)\n"
    ]
   },
   {
@@ -93,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,77 +167,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Message</th>\n",
-       "      <th>ActivityState</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>ActivityID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Transfer MP</td>\n",
-       "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Transfer MP</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:00:10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_ea211b90_19c4_11eb_8246_0242ac140002\" ><caption>Log of the Transfer MP</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_ea211b90_19c4_11eb_8246_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
+       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row0_col1\" class=\"data row0 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_ea211b90_19c4_11eb_8246_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:00:10</td>\n",
+       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row1_col1\" class=\"data row1 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_ea211b90_19c4_11eb_8246_0242ac140002row1_col2\" class=\"data row1 col2\" >STOP</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
       ],
       "text/plain": [
-       "       Message ActivityState           Timestamp  Value  \\\n",
-       "0  Transfer MP         START 1970-01-01 00:00:00      2   \n",
-       "1  Transfer MP          STOP 1970-01-01 00:00:10      2   \n",
-       "\n",
-       "                             ActivityID  \n",
-       "0  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
-       "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
+       "<pandas.io.formats.style.Styler at 0x7f0848194d68>"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_ea22664e_19c4_11eb_8246_0242ac140002\" ><caption>Log of the Winlocatie</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>        <th class=\"col_heading level0 col3\" >container level</th>        <th class=\"col_heading level0 col4\" >geometry</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_ea22664e_19c4_11eb_8246_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col1\" class=\"data row0 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col3\" class=\"data row0 col3\" >2</td>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row0_col4\" class=\"data row0 col4\" >POINT (4.18055556 52.18664444)</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_ea22664e_19c4_11eb_8246_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:00:10</td>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col1\" class=\"data row1 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col2\" class=\"data row1 col2\" >STOP</td>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col3\" class=\"data row1 col3\" >0</td>\n",
+       "                        <td id=\"T_ea22664e_19c4_11eb_8246_0242ac140002row1_col4\" class=\"data row1 col4\" >POINT (4.18055556 52.18664444)</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f0831c25588>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_ea23be40_19c4_11eb_8246_0242ac140002\" ><caption>Log of the Hopper 01</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>        <th class=\"col_heading level0 col3\" >geometry</th>        <th class=\"col_heading level0 col4\" >container level</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_ea23be40_19c4_11eb_8246_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col1\" class=\"data row0 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col3\" class=\"data row0 col3\" >POINT (4.18055556 52.18664444)</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row0_col4\" class=\"data row0 col4\" >0.000000</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_ea23be40_19c4_11eb_8246_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:00:00</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col1\" class=\"data row1 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col2\" class=\"data row1 col2\" >START</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col3\" class=\"data row1 col3\" >POINT (4.18055556 52.18664444)</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row1_col4\" class=\"data row1 col4\" >0.000000</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_ea23be40_19c4_11eb_8246_0242ac140002level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col0\" class=\"data row2 col0\" >1970-01-01 00:00:10</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col1\" class=\"data row2 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col2\" class=\"data row2 col2\" >STOP</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col3\" class=\"data row2 col3\" >POINT (4.18055556 52.18664444)</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row2_col4\" class=\"data row2 col4\" >2.000000</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_ea23be40_19c4_11eb_8246_0242ac140002level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col0\" class=\"data row3 col0\" >1970-01-01 00:00:10</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col1\" class=\"data row3 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col2\" class=\"data row3 col2\" >STOP</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col3\" class=\"data row3 col3\" >POINT (4.18055556 52.18664444)</td>\n",
+       "                        <td id=\"T_ea23be40_19c4_11eb_8246_0242ac140002row3_col4\" class=\"data row3 col4\" >2.000000</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f08347ec668>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "log_df = pd.DataFrame(activity.log)\n",
-    "data =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
-    "data"
+    "display(plot.get_log_dataframe(activity, [activity]))\n",
+    "display(plot.get_log_dataframe(from_site, [activity]))\n",
+    "display(plot.get_log_dataframe(hopper, [activity]))"
    ]
   },
   {
