--- a/notebooks/09_MultiContainer.ipynb
+++ b/notebooks/09_MultiContainer.ipynb
@@ -24,6 +24,7 @@
     "import pandas as pd\n",
     "import openclsim.core as core\n",
     "import openclsim.model as model\n",
+    "import openclsim.plot as plot\n",
     "\n",
     "# setup environment\n",
     "simulation_start = 0\n",
@@ -170,82 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_env.run()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Message</th>\n",
-       "      <th>ActivityState</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>ActivityID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Transfer MP</td>\n",
-       "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Transfer MP</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:00:20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff52</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Message ActivityState           Timestamp  Value  \\\n",
-       "0  Transfer MP         START 1970-01-01 00:00:00      1   \n",
-       "1  Transfer MP          STOP 1970-01-01 00:00:20      1   \n",
-       "\n",
-       "                             ActivityID  \n",
-       "0  6dbbbdf7-4589-11e9-bf3b-b469212bff52  \n",
-       "1  6dbbbdf7-4589-11e9-bf3b-b469212bff52  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "log_df = pd.DataFrame(activity.log)\n",
-    "data =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
-    "data"
+    "my_env.run()"
    ]
   },
   {
@@ -256,120 +182,95 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Message</th>\n",
-       "      <th>ActivityState</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>ActivityID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Shift amount activity Transfer MP transfer MP ...</td>\n",
-       "      <td>START</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Shift amount activity Transfer MP transfer MP ...</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>1970-01-01 00:00:20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff52</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002\" ><caption>Log of the Hopper 01</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>        <th class=\"col_heading level0 col3\" >geometry</th>        <th class=\"col_heading level0 col4\" >container level</th>        <th class=\"col_heading level0 col5\" >container level MP</th>        <th class=\"col_heading level0 col6\" >container level TP</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row0_col1\" class=\"data row0 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row0_col3\" class=\"data row0 col3\" >POINT (4.18055556 52.18664444)</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row0_col4\" class=\"data row0 col4\" >0</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row0_col5\" class=\"data row0 col5\" >0</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row0_col6\" class=\"data row0 col6\" >0</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:00:00</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row1_col1\" class=\"data row1 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row1_col2\" class=\"data row1 col2\" >START</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row1_col3\" class=\"data row1 col3\" >POINT (4.18055556 52.18664444)</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row1_col4\" class=\"data row1 col4\" >0</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row1_col5\" class=\"data row1 col5\" >0</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row1_col6\" class=\"data row1 col6\" >0</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row2_col0\" class=\"data row2 col0\" >1970-01-01 00:00:20</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row2_col1\" class=\"data row2 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row2_col2\" class=\"data row2 col2\" >STOP</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row2_col3\" class=\"data row2 col3\" >POINT (4.18055556 52.18664444)</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row2_col4\" class=\"data row2 col4\" >0</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row2_col5\" class=\"data row2 col5\" >1</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row2_col6\" class=\"data row2 col6\" >0</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row3_col0\" class=\"data row3 col0\" >1970-01-01 00:00:20</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row3_col1\" class=\"data row3 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row3_col2\" class=\"data row3 col2\" >STOP</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row3_col3\" class=\"data row3 col3\" >POINT (4.18055556 52.18664444)</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row3_col4\" class=\"data row3 col4\" >0</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row3_col5\" class=\"data row3 col5\" >1</td>\n",
+       "                        <td id=\"T_5f3c5f1a_19cb_11eb_9f2b_0242ac140002row3_col6\" class=\"data row3 col6\" >0</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
       ],
       "text/plain": [
-       "                                             Message ActivityState  \\\n",
-       "0  Shift amount activity Transfer MP transfer MP ...         START   \n",
-       "2  Shift amount activity Transfer MP transfer MP ...          STOP   \n",
-       "\n",
-       "            Timestamp  Value                            ActivityID  \n",
-       "0 1970-01-01 00:00:00      1  6dbbbdf7-4589-11e9-bf3b-b469212bff52  \n",
-       "2 1970-01-01 00:00:20      1  6dbbbdf7-4589-11e9-bf3b-b469212bff52  "
+       "<pandas.io.formats.style.Styler at 0x7f87a1e6c3c8>"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_5f3d6a22_19cb_11eb_9f2b_0242ac140002\" ><caption>Log of the Transfer MP</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_5f3d6a22_19cb_11eb_9f2b_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_5f3d6a22_19cb_11eb_9f2b_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
+       "                        <td id=\"T_5f3d6a22_19cb_11eb_9f2b_0242ac140002row0_col1\" class=\"data row0 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_5f3d6a22_19cb_11eb_9f2b_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_5f3d6a22_19cb_11eb_9f2b_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "                        <td id=\"T_5f3d6a22_19cb_11eb_9f2b_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:00:20</td>\n",
+       "                        <td id=\"T_5f3d6a22_19cb_11eb_9f2b_0242ac140002row1_col1\" class=\"data row1 col1\" >Transfer MP</td>\n",
+       "                        <td id=\"T_5f3d6a22_19cb_11eb_9f2b_0242ac140002row1_col2\" class=\"data row1 col2\" >STOP</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f87cc03f4a8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "hopper_log_df = pd.DataFrame(hopper.log)\n",
-    "hopper_data =hopper_log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
-    "hopper_data = hopper_data.drop_duplicates()\n",
-    "hopper_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The resulting levels of objects in the hopper and the from_site are requested below. "
+    "display(plot.get_log_dataframe(hopper, [activity]))\n",
+    "display(plot.get_log_dataframe(activity, [activity]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hopper.container.get_level(id_=\"TP\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from_site.container.get_level(id_=\"MP\")"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
