clean-up notebooks

--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -189,6 +189,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Activity</th>\n",
        "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
        "    </tr>\n",
@@ -196,11 +197,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Soil movement</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Soil movement</td>\n",
        "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
@@ -209,9 +212,9 @@
        "</div>"
       ],
       "text/plain": [
-       "                   Timestamp ActivityState\n",
-       "0 1970-01-01 00:00:00.000000         START\n",
-       "1 1970-01-01 00:15:42.824591          STOP"
+       "        Activity                  Timestamp ActivityState\n",
+       "0  Soil movement 1970-01-01 00:00:00.000000         START\n",
+       "1  Soil movement 1970-01-01 00:15:42.824591          STOP"
       ]
      },
      "metadata": {},
@@ -238,6 +241,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Activity</th>\n",
        "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
        "      <th>geometry</th>\n",
@@ -247,6 +251,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Soil movement</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
@@ -254,6 +259,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Soil movement</td>\n",
        "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
        "      <td>POINT (4.25222222 52.11428333)</td>\n",
@@ -264,13 +270,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                   Timestamp ActivityState                        geometry  \\\n",
-       "0 1970-01-01 00:00:00.000000         START  POINT (4.18055556 52.18664444)   \n",
-       "1 1970-01-01 00:15:42.824591          STOP  POINT (4.25222222 52.11428333)   \n",
+       "        Activity                  Timestamp ActivityState  \\\n",
+       "0  Soil movement 1970-01-01 00:00:00.000000         START   \n",
+       "1  Soil movement 1970-01-01 00:15:42.824591          STOP   \n",
        "\n",
-       "   container level  \n",
-       "0              0.0  \n",
-       "1              0.0  "
+       "                         geometry  container level  \n",
+       "0  POINT (4.18055556 52.18664444)              0.0  \n",
+       "1  POINT (4.25222222 52.11428333)              0.0  "
       ]
      },
      "metadata": {},
@@ -281,211 +287,6 @@
     "display(plot.get_log_dataframe(activity, [activity]))\n",
     "display(plot.get_log_dataframe(hopper, [activity]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>ActivityState</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>container level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1970-01-01 00:00:00.000000</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (4.18055556 52.18664444)</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1970-01-01 00:15:42.824591</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (4.25222222 52.11428333)</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   Timestamp ActivityState                        geometry  \\\n",
-       "0 1970-01-01 00:00:00.000000         START  POINT (4.18055556 52.18664444)   \n",
-       "1 1970-01-01 00:15:42.824591          STOP  POINT (4.25222222 52.11428333)   \n",
-       "\n",
-       "   container level  \n",
-       "0              0.0  \n",
-       "1              0.0  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "simulation_object = hopper\n",
-    "activities = []\n",
-    "id_map = {act.id: act.name for act in activities}\n",
-    "pd.concat(\n",
-    "    [\n",
-    "        (\n",
-    "            pd.DataFrame(simulation_object.log)\n",
-    "            .filter(\"ActivityID\")\n",
-    "            .rename(columns={\"ActivityID\": \"Activity\"})\n",
-    "            .replace(id_map)\n",
-    "        ),\n",
-    "        pd.DataFrame(simulation_object.log).filter([\"Timestamp\", \"ActivityState\"]),\n",
-    "        pd.DataFrame(simulation_object.log[\"ObjectState\"]),\n",
-    "    ],\n",
-    "    axis=1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [0, 1]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(\n",
-    "    pd.DataFrame(simulation_object.log)\n",
-    "    .filter(items=\"ActivityID\")\n",
-    "    .rename(columns={\"ActivityID\": \"Activity\"})\n",
-    "    .replace(id_map)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [0, 1]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.DataFrame(simulation_object.log)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
