opentnsim integration example

--- a/notebooks/19_OpenTNSim integration.ipynb
+++ b/notebooks/19_OpenTNSim integration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,22 +89,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Metadata:\n",
+    "    \"\"\"Something that has a name and id\n",
+    "    name: a name\n",
+    "    id: a unique id generated with uuid\"\"\"\n",
+    "\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__()\n",
+    "        self.metadata = kwargs\n",
+    "        self.metadata['args'] = args\n",
+    "\n",
     "TransportProcessingResource = type(\n",
     "    \"TransportProcessingResource\",\n",
     "    (\n",
     "        core.Identifiable,\n",
     "        core.Log,\n",
-    "        core.ContainerDependentMovable,\n",
+    "        opentnsim.core.ContainerDependentMovable,\n",
     "        opentnsim.core.VesselProperties,\n",
     "        opentnsim.core.Routeable,\n",
     "        core.HasResource,\n",
     "        core.Processor,\n",
     "        core.LoadingFunction,\n",
     "        core.UnloadingFunction,\n",
+    "        opentnsim.core.ExtraMetadata\n",
+    "        \n",
     "    ),\n",
     "    {},\n",
     ")\n",
@@ -115,7 +127,7 @@
     "data_hopper = {\n",
     "    \"env\": my_env,\n",
     "    \"name\": \"Hopper 01\",\n",
-    "    \"ID\": \"6dbbbdf6-4589-11e9-95a2-b469212bff5b\",\n",
+    "    \"id\": \"6dbbbdf6-4589-11e9-95a2-b469212bff5b\",\n",
     "    \"geometry\": location_from_site,\n",
     "    \"loading_rate\": 1,\n",
     "    \"unloading_rate\": 1,\n",
@@ -134,6 +146,27 @@
     "}\n",
     "\n",
     "hopper = TransportProcessingResource(**data_hopper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'opentnsim.core' has no attribute 'Identifiable'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-edc43bddeeb2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mopentnsim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIdentifiable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'opentnsim.core' has no attribute 'Identifiable'"
+     ]
+    }
+   ],
+   "source": [
+    "opentnsim.core.Identifiable(name='a')"
    ]
   },
   {
